adcionando ao código ids e image

--- a/projeto_pratico_01/index.html
+++ b/projeto_pratico_01/index.html
@@ -5,5 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card</title>
   </head>
-  <body></body>
+  <body style="background: yellow">
+    <div id="card" style="background: white; width: 150px">
+      <div id="titulo">Visto Recentemente</div>
+      <div id="img">
+        <img
+          style="width: 150px"
+          src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
+          alt="Iagem de um roteador"
+        />
+      </div>
+      <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
+      <div id="valor" style="background: black">R$ 759</div>
+      <div id="frete">Frete grátis</div>
+    </div>
+  </body>
 </html>
