--- a/projeto_pratico_01/index.html
+++ b/projeto_pratico_01/index.html
@@ -6,18 +6,67 @@
     <title>Card</title>
   </head>
   <body style="background: yellow">
-    <div id="card" style="background: white; width: 150px">
-      <div id="titulo">Visto Recentemente</div>
-      <div id="img">
+    <div
+      id="card"
+      style="background: white; width: 150px; border-radius: 4px; padding: 20px"
+    >
+      <div
+        id="titulo"
+        style="
+          font-size: 16px;
+          padding: 16px 12px 16px 16px; /* foi aplicado espaço cima, direita, baixo e esquerda */
+          line-height: 20px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        "
+      >
+        Visto Recentemente
+      </div>
+      <div
+        id="img"
+        style="display: flex; justify-content: center; align-items: center"
+      >
         <img
-          style="width: 150px"
+          style="width: 100px"
           src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
           alt="Iagem de um roteador"
         />
       </div>
-      <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
-      <div id="valor" style="background: black">R$ 759</div>
-      <div id="frete">Frete grátis</div>
+      <div
+        id="infoProduto"
+        style="
+          color: rgba(0, 0, 0, 0.9);
+          display: -webkit-box;
+          font-family: Proxima Nova, -apple-system, Roboto, Arial, sans-serif;
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 1.25;
+          margin-top: 15px;
+          margin-bottom: 8px;
+          overflow: hidden;
+          text-decoration: none;
+          text-overflow: ellipsis;
+          width: 100%;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+        "
+      >
+        Roteador Gigabit Ax5400 Tp-link Archer
+      </div>
+      <div id="valor" style="font-size: 18px; font-weight: bold">R$ 759</div>
+      <div
+        id="frete"
+        style="
+          color: #00a650;
+          display: flex;
+          font-size: 16px;
+          font-weight: 600;
+          margin-top: 5px;
+        "
+      >
+        Frete grátis
+      </div>
     </div>
   </body>
 </html>
