--- a/projeto_pratico_01/index.html
+++ b/projeto_pratico_01/index.html
@@ -3,66 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Card</title>
   </head>
-  <body style="background: yellow">
-    <div
-      id="card"
-      style="background: white; width: 150px; border-radius: 4px; padding: 20px"
-    >
-      <div
-        id="titulo"
-        style="
-          font-size: 16px;
-          padding: 16px 12px 16px 16px; /* foi aplicado espaço cima, direita, baixo e esquerda */
-          line-height: 20px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-        "
-      >
-        Visto Recentemente
+  <body>
+    <header>
+      <div class="logo">
+        <img src="novo_logo-removebg-preview.png" alt="Logo da sua loja" />
       </div>
-      <div
-        id="img"
-        style="display: flex; justify-content: center; align-items: center"
-      >
-        <img
-          style="width: 100px"
-          src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
-          alt="Iagem de um roteador"
-        />
+      <nav>
+        <ul>
+          <li><a href="#">Início</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Ofertas</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
+      <div id="cards">
+        <div id="titulo">Visto Recentemente</div>
+        <div id="img">
+          <img
+            src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
+            alt="Iagem de um roteador"
+          />
+        </div>
+        <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
+        <div id="valor">R$ 759</div>
+        <div id="frete">Frete grátis</div>
       </div>
-      <div
-        id="infoProduto"
-        style="
-          color: rgba(0, 0, 0, 0.732);
-          display: -webkit-box;
-          font-family: Proxima Nova, -apple-system, Roboto, Arial, sans-serif;
-          font-size: 18px;
-          font-weight: 400;
-          line-height: 1.25;
-          margin-top: 15px;
-          margin-bottom: 8px;
-          overflow: hidden;
-          -webkit-line-clamp: 2;
-          -webkit-box-orient: vertical;
-        "
-      >
-        Roteador Gigabit Ax5400 Tp-link Archer
+
+      <div id="cards">
+        <div id="titulo">Visto Recentemente</div>
+        <div id="img">
+          <img
+            src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
+            alt="Iagem de um roteador"
+          />
+        </div>
+        <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
+        <div id="valor">R$ 759</div>
+        <div id="frete">Frete grátis</div>
       </div>
-      <div id="valor" style="font-size: 18px; font-weight: bold">R$ 759</div>
-      <div
-        id="frete"
-        style="
-          color: #00a650;
-          display: flex;
-          font-size: 16px;
-          font-weight: 600;
-          margin-top: 5px;
-        "
-      >
-        Frete grátis
+
+      <div id="cards">
+        <div id="titulo">Visto Recentemente</div>
+        <div id="img">
+          <img
+            src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
+            alt="Iagem de um roteador"
+          />
+        </div>
+        <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
+        <div id="valor">R$ 759</div>
+        <div id="frete">Frete grátis</div>
+      </div>
+
+      <div id="cards">
+        <div id="titulo">Visto Recentemente</div>
+        <div id="img">
+          <img
+            src="https://http2.mlstatic.com/D_NQ_NP_2X_641854-MLU72933207437_112023E-F.webp"
+            alt="Iagem de um roteador"
+          />
+        </div>
+        <div id="infoProduto">Roteador Gigabit Ax5400 Tp-link Archer</div>
+        <div id="valor">R$ 759</div>
+        <div id="frete">Frete grátis</div>
       </div>
     </div>
   </body>
