--- a/logica_programacao/index.htm
+++ b/logica_programacao/index.htm
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h2>Simulação de Loja</h2>
+      <button id="simularBtn">Simular Vendas</button>
+      <div id="resultados"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
